--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.2.0",
     "lucide-react": "^0.553.0",
     "recharts": "^3.3.0",
-    "prop-types": "^15.8.1"
+    "prop-types": "^15.8.1",
+    "@google/genai": "^1.29.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
